unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/Fleet_Inspection_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Fleet Inspection Line Item</label>
    <nameField>
        <displayFormat>FILI-{0000}</displayFormat>
        <label>Fleet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fleet Inspection Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>