unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/ETT_Bad_Reason_Complaint__c.field-meta.xml
<CustomField>
    <fullName>ETT_Bad_Reason_Complaint__c</fullName>
    <label>Bad Reason Complaint</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Torn Bead</fullName>
            </value>
            <value>
                <fullName>Kinked/Distorted Beads Condition</fullName>
            </value>
            <value>
                <fullName>Bead Deformation</fullName>
            </value>
            <value>
                <fullName>Reinforce / Chafer Separation</fullName>
            </value>
            <value>
                <fullName>Bead Damage From Curbing</fullName>
            </value>
            <value>
                <fullName>Bead Area Flow Crack</fullName>
            </value>
            <value>
                <fullName>Burned Beads</fullName>
            </value>
            <value>
                <fullName>Petro/ Lubricant Damage</fullName>
            </value>
            <value>
                <fullName>Spread/Damaged Cord</fullName>
            </value>
            <value>
                <fullName>Sidewall Separation</fullName>
            </value>
            <value>
                <fullName>Vehicle/Equipment Damage</fullName>
            </value>
            <value>
                <fullName>Sidewall Abrasion/Scuff Damage</fullName>
            </value>
            <value>
                <fullName>Impact Break</fullName>
            </value>
            <value>
                <fullName>Diagonal Cracking</fullName>
            </value>
            <value>
                <fullName>Forklift Damage</fullName>
            </value>
            <value>
                <fullName>Petroleum Product Damage</fullName>
            </value>
            <value>
                <fullName>Branding Damage</fullName>
            </value>
            <value>
                <fullName>Aging Crack/Weathering</fullName>
            </value>
            <value>
                <fullName>Damage Induced Sidewall Separation</fullName>
            </value>
            <value>
                <fullName>Chain Damage</fullName>
            </value>
            <value>
                <fullName>Cuts and Snags</fullName>
            </value>
            <value>
                <fullName>Steer Axle Shoulder Step/Chamfer Wear</fullName>
            </value>
            <value>
                <fullName>Feather Wear</fullName>
            </value>
            <value>
                <fullName>Cupping/Scallop Wear</fullName>
            </value>
            <value>
                <fullName>Diagonal Wear</fullName>
            </value>
            <value>
                <fullName>Steer Axle Overall Fast Wear</fullName>
            </value>
            <value>
                <fullName>Erratic Depression Wear</fullName>
            </value>
            <value>
                <fullName>Full Shoulder Wear</fullName>
            </value>
            <value>
                <fullName>Erosion/River/Channel Wear</fullName>
            </value>
            <value>
                <fullName>Steer Axle One Sided Wear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>