unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/ETT_Brand__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Fleet Inspection Line Item</relationshipLabel>
    <relationshipName>Fleet_Inspection_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>