unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/ETT_Proper_Pressure__c.field-meta.xml
<CustomField>
    <fullName>ETT_Proper_Pressure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proper Pressure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>