unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/ETT_Tread_Depth_Actual__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tread_Depth_Actual__c</fullName>
    <label>Tread Depth Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>