unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/ETT_Tread_Depth_Original__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tread_Depth_Original__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tread Depth Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>