unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Fleet Inspection Line Item</relationshipLabel>
    <relationshipName>Fleet_Inspection_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>