unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/ETT_Tyre_Size_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre Size Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>