unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/FileSourceTemp__c.field-meta.xml
<CustomField>
    <fullName>FileSourceTemp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FileSourceTypeTemp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>