unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/Fleet_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Inspection__c</fullName>
    <label>Fleet Inspection</label>
    <referenceTo>ETT_Fleet_Inspection__c</referenceTo>
    <relationshipLabel>Fleet Inspection Line Item</relationshipLabel>
    <relationshipName>Fleet_Inspection_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>