unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/Retread_Tread_Design__c.field-meta.xml
<CustomField>
    <fullName>Retread_Tread_Design__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retread Tread Design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>