unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/Retreader__c.field-meta.xml
<CustomField>
    <fullName>Retreader__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retreader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>