unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/fields/Tyre_Status__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Status__c</fullName>
    <label>Tyre Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Precured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>