unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/recordTypes/ETT_Bus.recordType-meta.xml
<RecordType>
    <fullName>ETT_Bus</fullName>
    <active>true</active>
    <label>Bus</label>
</RecordType>