unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/recordTypes/ETT_Trailor.recordType-meta.xml
<RecordType>
    <fullName>ETT_Trailor</fullName>
    <active>true</active>
    <label>Trailor</label>
</RecordType>