unpackaged/main/default/objects/Fleet_Inspection_Line_Item__c/recordTypes/ETT_Truck.recordType-meta.xml
<RecordType>
    <fullName>ETT_Truck</fullName>
    <active>true</active>
    <label>Truck</label>
</RecordType>